Opened 10 years ago
Closed 10 years ago
#9982 closed bug (fixed)
[Installer] doesn't quit correctly on alt+w at EULA window
Reported by: | diver | Owned by: | stpere |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Installer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Closing Installer using alt+w while it shows EULA window makes it hang in the Deskbar. Used to work fine in A3.
Attachments (3)
Change History (15)
comment:1 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:2 by , 10 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
The fix was reverted in hrev46248.
comment:3 by , 10 years ago
Owner: | changed from | to
---|---|
Status: | reopened → assigned |
comment:4 by , 10 years ago
Should it really quit when closing the window? Wouldn't it make more sense if it would just continue to the application? I mean, there is still Alt-Q to close the application if that's your intent.
comment:5 by , 10 years ago
As long as it doesn't just hang in Deskbar without any window it should be fine ;-)
comment:7 by , 10 years ago
I vote for having it continue with the installation as well. And, yes, let's see what GCI students can come up with.
comment:8 by , 10 years ago
patch: | 0 → 1 |
---|
by , 10 years ago
Attachment: | 0001-installer-eula-fix.patch added |
---|
comment:9 by , 10 years ago
Two patches are included. One to fix the original exit bug, the other to open the installation window after the EULA window has been closed. Time to pick...
comment:10 by , 10 years ago
A few remarks:
- The line "BString infoText;" in your patches is misaligned.
- The copyright header seems wrong formatted (missing comma and period).
- In a .cpp there are two blank lines after the copyright header.
- Line 7, 9 and 13 of the EULAWindow.h should be also two blank lines.
- EULAWindow doesn't need member attributes (local variables are OK).
Thanks!
comment:11 by , 10 years ago
Is anyone getting crashes at InstallerApp::MessageReceived()? The current mentor is getting them but I can't replicate the bug.
by , 10 years ago
Attachment: | 0001-installer-eula-fix-goes-to-next-window.2.patch added |
---|
by , 10 years ago
Attachment: | 0001-installer-eula-fix-goes-to-next-window.patch added |
---|
comment:12 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Applied in hrev46670. Thanks.
should be fixed in hrev46245. Thanks!