fix #9982: make installer quit when alt+w in eula window